BE-03: Criando conexao com o banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=travel-plan-backend
 
+#url para o banco de dados
 spring.datasource.url = jdbc:postgresql://localhost:5432/travel-plan
+#usuario do banco de dados
 spring.datasource.username=postgres
+#senha do banco de dados
 spring.datasource.password=postgres
+#tabela no banco de dados criada automaticamente
 spring.jpa.hibernate.ddl-auto=update
-
+#nao cria logs do hibernate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
