BE-01: Implementando JWT Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 #nao cria logs do hibernate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
