--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.travel-plan</groupId>
-	<artifactId>travel-plan-backend</artifactId>
+	<artifactId>travel-plan-backend</artifactId> 
 	<version>0.0.1-SNAPSHOT</version>
 	<name>travel-plan-backend</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -29,6 +31,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+		  <groupId>org.springframework.security</groupId>
+		  <artifactId>spring-security-test</artifactId>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -49,6 +60,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+		  <groupId>com.auth0</groupId>
+		  <artifactId>java-jwt</artifactId>
+		  <version>4.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -65,6 +81,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-compiler-plugin</artifactId>
+			  <configuration>
+			    <source>17</source>
+			    <target>17</target>
+			  </configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 
